fix word-wrap

--- a/src/HomePage/PlaylistSuggestion/components/PlaylistCard/style.scss
+++ b/src/HomePage/PlaylistSuggestion/components/PlaylistCard/style.scss
@@ -1,4 +1,6 @@
 .playlist-card-wrapper {
-  width: 100%;
   text-align: left;
+  .info{
+    width: 140px;
+  }
 }
